<resources>
    <string name="app_name">Ome</string>
    <string name="name">Name</string>
    <string name="lastName">Last Name</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="street_address">Street Address</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="welcome">WELCOME</string>
    <string name="scrollview">Scrollview</string>
    <string name="birthday">Birthday</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="agree">Agree Terms</string>
    <string name="or">OR</string>
    <string name="details">Details</string>
    <string name="data">Your Data</string>
    <string name="state">State</string>
    <string name="False">false</string>



    <string-array name="years">
        <item></item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
    </string-array>

    <string-array name="month">
        <item></item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="state">
        <item></item>
        <item>Amazonas</item>
        <item>Antioquia</item>
        <item>Bogota</item>
        <item>Cauca</item>
        <item>Choco</item>
        <item>Cundinamarca</item>
        <item>Huila</item>
        <item>La Guajira</item>
        <item>Meta</item>
        <item>Nariño</item>
        <item>Santander</item>
        <item>Sucre</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
