<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="650dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_register">

    <TextView
        android:id="@+id/txt_yourData"
        android:layout_width="280dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="25dp"
        android:text="@string/data"
        android:gravity="center"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_medium"

        />
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="280dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_yourData"
        android:layout_marginTop="8dp"
        android:hint="@string/name"
        />
    <TextView
        android:id="@+id/txt_lastName"
        android:layout_width="280dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        android:layout_marginTop="4dp"
        android:hint="@string/lastName"
        />
    <TextView
        android:id="@+id/txt_email"
        android:layout_width="280dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_lastName"
        android:layout_marginTop="4dp"
        android:hint="@string/email_address"
        />
    <TextView
        android:id="@+id/txt_birthday"
        android:layout_width="280dp"
        android:layout_height="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_email"
        android:layout_marginTop="4dp"
        android:hint="@string/birthday"
        android:gravity="center"
        android:textSize="17sp"
        />

    <TextView
        android:id="@+id/txt_year"
        android:layout_width="95dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.144"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_birthday" />

    <TextView
        android:id="@+id/txt_month"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/month"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toEndOf="@id/txt_year"
        app:layout_constraintTop_toBottomOf="@id/txt_birthday" />

    <TextView
        android:id="@+id/txt_day"
        android:layout_width="95dp"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:hint="@string/day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toEndOf="@id/txt_month"
        app:layout_constraintTop_toBottomOf="@id/txt_birthday" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="48dp"
        app:layout_constraintTop_toBottomOf="@id/txt_month"
        android:hint="@string/address"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="15dp"
        android:id="@+id/txt_address"
        android:gravity="center"
        android:textSize="17sp"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <TextView
        android:id="@+id/txt_street"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:hint="@string/street_address"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_address"

        />

    <TextView
        android:id="@+id/txt_city"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:hint="@string/city"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_street"

        />


    <TextView
        android:id="@+id/txt_state"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:hint="@string/state"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_city"

        />

    <TextView
        android:id="@+id/txt_agreet"
        android:layout_width="187dp"
        android:layout_height="30dp"
        android:layout_marginTop="28dp"
        android:hint="@string/agree"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_state"

        />

    <TextView
        android:id="@+id/txt_agreeTerms"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/False"
        android:gravity="center"
        android:padding="6dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toEndOf="@id/txt_agreet"
        app:layout_constraintTop_toBottomOf="@id/txt_state"

        />

</androidx.constraintlayout.widget.ConstraintLayout>