<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollview_register"
    android:layout_width="402dp"
    android:layout_height="729dp"
    android:background="@drawable/background_register"
    android:contentDescription="@string/scrollview"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        tools:context=".SignUp">

        <TextView
            android:id="@+id/text_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/register"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="144dp"
            tools:layout_editor_absoluteY="55dp" />

        <EditText
            android:id="@+id/text_name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:hint="@string/name"
            android:inputType="text"
            android:minHeight="49dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_register" />

        <EditText
            android:id="@+id/text_lastName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="name"
            android:hint="@string/lastName"
            android:inputType="text"
            android:minHeight="49dp"
            app:layout_constraintEnd_toEndOf="@+id/text_name"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_name"
            app:layout_constraintTop_toBottomOf="@+id/text_name"
            tools:ignore="TextContrastCheck,TextContrastCheck" />

        <AutoCompleteTextView
            android:id="@+id/autoEmail_address"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/email_address"
            android:minHeight="49dp"
            app:layout_constraintEnd_toEndOf="@id/text_lastName"
            app:layout_constraintStart_toStartOf="@id/text_lastName"
            app:layout_constraintTop_toBottomOf="@id/text_lastName"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="220dp" />

        <TextView
            android:id="@+id/text_birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/birthday"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/autoEmail_address" />

        <Spinner
            android:id="@+id/spinner_years"
            android:layout_width="153dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            android:contentDescription="@string/year"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_birthday" />

        <Spinner
            android:id="@+id/spinner_month"
            android:layout_width="221dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:contentDescription="@string/month"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.223"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_years" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="72dp"
            android:layout_height="48dp"
            android:layout_marginTop="116dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/day"
            android:inputType="number"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.59"
            app:layout_constraintStart_toEndOf="@+id/spinner_month"
            app:layout_constraintTop_toBottomOf="@+id/text_birthday"
            android:autofillHints="number"/>

        <TextView
            android:id="@+id/text_Address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/montserrat_alternates"
            android:text="@string/address"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_month" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="242dp"
            android:layout_height="52dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.185"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/street_address"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="70dp"
            android:text="@string/register"
            android:background="@drawable/button_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.909"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/agreeT" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="231dp"
            android:layout_height="53dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.179"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/city"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:id="@+id/spn_state"
            android:layout_width="245dp"
            android:layout_height="48dp"
            android:layout_marginTop="36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.195"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/agreeT"
            android:layout_width="171dp"
            android:layout_height="48dp"
            android:layout_marginTop="144dp"
            android:text="@string/agree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spn_state" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/back"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="1043dp"
            android:background="@drawable/button_sign"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_register"
            app:layout_constraintTop_toBottomOf="@id/agreeT"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            android:layout_marginTop="36dp"
            android:layout_marginBottom="70dp"
            android:layout_marginStart="22dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>
